--- a/src/app/reactives/components/dynamic-forms/dynamic-forms.component.html
+++ b/src/app/reactives/components/dynamic-forms/dynamic-forms.component.html
@@ -1,1 +1,52 @@
-<p>dinamic-forms works!</p>
+<h3>
+  Template Forms:
+  <small>Dynamic Forms</small>
+</h3>
+<hr />
+
+<form (ngSubmit)="saveData()" [formGroup]="form" autocomplete="off">
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">First name</label>
+    <div class="col-sm-9">
+      <input formControlName="firstName" type="text" class="form-control" placeholder="First name" />
+      <span *ngIf="checkControl('firstName')" class="form-text text-danger">This field is required</span>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Last name</label>
+    <div class="col-sm-9">
+      <input formControlName="lastName" type="text" class="form-control" placeholder="Last name" />
+      <span *ngIf="checkControl('lastName')" class="form-text text-danger">This field is required</span>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">Favorite games</label>
+    <div class="col-sm-9">
+      <div class="input-group">
+        <input type="text" (keyup.enter)="1==1" class="form-control" placeholder="Add favorite game" />
+        <button type="button" (click)="1==1" class="btn btn-outline-primary">Add</button>
+      </div>
+    </div>
+  </div>
+
+  <div class="mb-3 row">
+    <label class="col-sm-3 col-form-label">My Favorite games</label>
+    <div class="col-sm-9">
+      <!-- <div *ngFor="let game of person.favoriteGames; let i = index" class="input-group mb-1">
+        <input type="text" class="form-control" />
+        <button type="button" (click)="1==1" class="btn btn-outline-danger">Remove</button>
+      </div> -->
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <button type="submit" [disabled]="form.invalid" class="btn btn-primary float-end">Save</button>
+    </div>
+  </div>
+</form>
+
+<h4>Person</h4>
+<!-- <pre>{{ person | json }}</pre> -->
