--- a/src/app/templates/components/dynamic-forms/dynamic-forms.component.html
+++ b/src/app/templates/components/dynamic-forms/dynamic-forms.component.html
@@ -32,7 +32,7 @@
   </div>
 
   <div class="mb-3 row">
-    <label class="col-sm-3 col-form-label">My Favorite games</label>
+    <label class="col-sm-3 col-form-label">My favorite games</label>
     <div class="col-sm-9">
       <div *ngFor="let game of person.favoriteGames; let i = index" class="input-group mb-1">
         <input
