--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -1,1 +1,61 @@
-<p>register works!</p>
+<h3>
+  Auth:
+  <small>Reactive Validations</small>
+</h3>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <form autocomplete="off">
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Email</label>
+        <div class="col-sm-9">
+          <input type="email" class="form-control" placeholder="Email" />
+          <span class="form-text text-danger">This field is required</span>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Username</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" placeholder="Username" />
+          <span class="form-text text-danger">This field is required</span>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">First Name</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" placeholder="First name" />
+          <span class="form-text text-danger">This field is required</span>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Last Name</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" placeholder="Last name" />
+          <span class="form-text text-danger">This field is required</span>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Password</label>
+        <div class="col-sm-9">
+          <input type="password" class="form-control" placeholder="Password" />
+          <span class="form-text text-danger">This field is required</span>
+        </div>
+      </div>
+
+      <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">Confirm Password</label>
+        <div class="col-sm-9">
+          <input type="password" class="form-control" placeholder="Confirm Password" />
+          <span class="form-text text-danger">Passwords must match</span>
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary float-end">Register</button>
+    </form>
+  </div>
+</div>
