--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -6,11 +6,11 @@
 
 <div class="row">
   <div class="col">
-    <form autocomplete="off">
+    <form [formGroup]="form" autocomplete="off">
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
-          <input type="email" class="form-control" placeholder="Email" />
+          <input formControlName="email" type="email" class="form-control" placeholder="Email" />
           <span class="form-text text-danger">This field is required</span>
         </div>
       </div>
@@ -18,7 +18,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Username" />
+          <input formControlName="username" type="text" class="form-control" placeholder="Username" />
           <span class="form-text text-danger">This field is required</span>
         </div>
       </div>
@@ -26,7 +26,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">First Name</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="First name" />
+          <input formControlName="firstName" type="text" class="form-control" placeholder="First name" />
           <span class="form-text text-danger">This field is required</span>
         </div>
       </div>
@@ -34,7 +34,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Last Name</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control" placeholder="Last name" />
+          <input formControlName="lastName" type="text" class="form-control" placeholder="Last name" />
           <span class="form-text text-danger">This field is required</span>
         </div>
       </div>
@@ -42,7 +42,7 @@
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
-          <input type="password" class="form-control" placeholder="Password" />
+          <input formControlName="password" type="password" class="form-control" placeholder="Password" />
           <span class="form-text text-danger">This field is required</span>
         </div>
       </div>
@@ -59,3 +59,43 @@
     </form>
   </div>
 </div>
+
+<h4>
+  <strong>Valid: </strong>
+  <small>{{ form.valid }}</small>
+</h4>
+
+<br />
+
+<h4>
+  <strong>Email Errors:</strong>
+</h4>
+<pre>{{ form.controls.email.errors | json }}</pre>
+
+<br />
+
+<h4>
+  <strong>Username Errors:</strong>
+</h4>
+<pre>{{ form.controls.username.errors | json }}</pre>
+
+<br />
+
+<h4>
+  <strong>First Name Errors:</strong>
+</h4>
+<pre>{{ form.controls.firstName.errors | json }}</pre>
+
+<br />
+
+<h4>
+  <strong>Last Name Errors:</strong>
+</h4>
+<pre>{{ form.controls.lastName.errors | json }}</pre>
+
+<br />
+
+<h4>
+  <strong>Password Errors:</strong>
+</h4>
+<pre>{{ form.controls.password.errors | json }}</pre>
