Control checker was added into RegisterComponent

--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -11,7 +11,7 @@
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
           <input formControlName="email" type="email" class="form-control" placeholder="Email" />
-          <span class="form-text text-danger">This field is required</span>
+          <span *ngIf="checkControl('email')" class="form-text text-danger">This field is required</span>
         </div>
       </div>
 
@@ -19,7 +19,7 @@
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
           <input formControlName="username" type="text" class="form-control" placeholder="Username" />
-          <span class="form-text text-danger">This field is required</span>
+          <span *ngIf="checkControl('username')" class="form-text text-danger">This field is required</span>
         </div>
       </div>
 
@@ -27,7 +27,7 @@
         <label class="col-sm-3 col-form-label">First Name</label>
         <div class="col-sm-9">
           <input formControlName="firstName" type="text" class="form-control" placeholder="First name" />
-          <span class="form-text text-danger">This field is required</span>
+          <span *ngIf="checkControl('firstName')" class="form-text text-danger">This field is required</span>
         </div>
       </div>
 
@@ -35,7 +35,7 @@
         <label class="col-sm-3 col-form-label">Last Name</label>
         <div class="col-sm-9">
           <input formControlName="lastName" type="text" class="form-control" placeholder="Last name" />
-          <span class="form-text text-danger">This field is required</span>
+          <span *ngIf="checkControl('lastName')" class="form-text text-danger">This field is required</span>
         </div>
       </div>
 
@@ -43,15 +43,15 @@
         <label class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
           <input formControlName="password" type="password" class="form-control" placeholder="Password" />
-          <span class="form-text text-danger">This field is required</span>
+          <span *ngIf="checkControl('password')" class="form-text text-danger">This field is required</span>
         </div>
       </div>
 
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Confirm Password</label>
         <div class="col-sm-9">
-          <input type="password" class="form-control" placeholder="Confirm Password" />
-          <span class="form-text text-danger">Passwords must match</span>
+          <input formControlName="verifyPassword" type="password" class="form-control" placeholder="Confirm Password" />
+          <span *ngIf="checkControl('verifyPassword')" class="form-text text-danger">Passwords must match</span>
         </div>
       </div>
 
