--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -68,6 +68,14 @@
 <br />
 
 <h4>
+  <strong>Errors:</strong>
+</h4>
+<pre>{{ form.errors | json }}</pre>
+
+
+<br />
+
+<h4>
   <strong>Email Errors:</strong>
 </h4>
 <pre>{{ form.controls.email.errors | json }}</pre>
@@ -99,3 +107,8 @@
   <strong>Password Errors:</strong>
 </h4>
 <pre>{{ form.controls.password.errors | json }}</pre>
+
+<h4>
+  <strong>Verify Password Errors:</strong>
+</h4>
+<pre>{{ form.controls.verifyPassword.errors | json }}</pre>
